--- a/index.html
+++ b/index.html
@@ -2,8 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/webp" href="/images/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gestoriaintegraldiaz.com/" />
+    <meta property="og:title" content="Gestoria Integral Díaz Liliana" />
+    <meta property="og:description" content="Expertos en Gestoría Automotor, Notarial, Judicial, Inmobiliaria y Náutica. Tu solución integral en trámites y seguros." />
+    <meta property="og:image" content="https://gestoriaintegraldiaz.com/images/logo.webp" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://gestoriaintegraldiaz.com/" />
+    <meta name="twitter:title" content="Gestoria Integral Díaz Liliana" />
+    <meta name="twitter:description" content="Expertos en Gestoría Automotor, Notarial, Judicial, Inmobiliaria y Náutica. Tu solución integral en trámites y seguros." />
+    <meta name="twitter:image" content="https://gestoriaintegraldiaz.com/images/logo.webp" />
+
     <title>Gestoria Integral Díaz Liliana</title>
   </head>
   <body>
