--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="twitter:image" content="https://gestoriaintegraldiaz.com/images/logo.webp" />
 
     <title>Gestoria Integral Díaz Liliana</title>
+    <script defer src="https://herramientas-umami.i41qxr.easypanel.host/script.js" data-website-id="584df198-90fe-4d60-878f-02f69c3d1318"></script>
   </head>
   <body>
     <div id="root"></div>
